--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "iview": "^3.5.4",
     "less": "^2.7.3",
     "less-loader": "^5.0.0",
     "vue": "^2.6.11",
