--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "iview": "^3.5.4",
     "less": "^2.7.3",
     "less-loader": "^5.0.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
