--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less": "^2.7.3",
     "less-loader": "^5.0.0",
     "vue": "^2.6.11",
+    "vue-print-nb": "^1.7.4",
     "vue-router": "^3.2.0",
     "xlsx": "^0.17.0"
   },
